--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
                     id="userAddress"
                     >0x..add-here</small>
                 </div>
-              <p class="card-text mt-3 d-none">
-                visit <a href="mint-usdc.html">here</a> to mint usdc
-              </p>
+            
             </div>
             <div class="mt-4">
               <h5 class="fw-bold">Transfer ETH</h5>
@@ -101,14 +99,15 @@
                   <button id="tranferEth" class="btn btn-success w-100" type="submit">
                     Tranfer
                   </button>
-
-                  <div class="container mt-5">
-                    <h3>Mint ETH</h3>
-                    <p>Click the button below to mint ETH</p>
-                    <button class="btn btn-dark" onclick="minEth()">Mint Now</button>
-                  </div>
                 </div>
               </form>
+
+              <div class="container mt-5">
+                <h3>Mint ETH</h3>
+                <p>Click the button below to mint ETH</p>
+                <button class="btn btn-dark" onclick="mintEth()">Mint Now</button>
+              </div>
+              
             </div>
           </section>
         </div>
