update something not important

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <div class="container mt-">
         <div class="d-flex min-vh-100 justify-content-center align-items-center">
           <section class="border rounded p-4 py-5 shadow">
-
+<hr>
             <div class="blockchain-info">
-                <h3>Network name: </h3>
                     <small
                     class="
                         bg-light
@@ -31,7 +30,7 @@
                     "
                     id="networkName"
                     >network-name</small>
-                <h3>Chain ID: </h3>
+                
                     <small
                         class="
                             bg-light
@@ -43,7 +42,7 @@
                         id="chainId" 
                     >Chain ID:</small>
             </div>
-
+<br>
             <div>
               <div class="card text-light bg-dark p-4" style="width: 400px">
                 <button class="enableEthereumButton btn btn-primary">Connect to Metamask Wallet</button>
@@ -104,9 +103,10 @@
 
               <!-- Mint to blockchain-->
               <div class="container mt-5">
-                <h3>Mint ETH updating.......</h3>
+                <!-- <h3>Mint ETH updating.......</h3>
                 <p>Click the button below to mint ETH</p>
                 <button class="btn btn-dark mint" disabled>Mint Now</button>
+                <button class="btn-success" type="button" id="switchNetwork">switch network</button> -->
               </div>
 
             </div>
